陸軍禮節條例 1930.7.19

--- a/行政-國防/陸軍禮節條例.md
+++ b/行政-國防/陸軍禮節條例.md
@@ -1,50 +1,50 @@
-* 1 凡陸軍軍人軍隊之敬禮及陸軍之儀節，均依本令規定之。
+* 1 凡陸軍軍人軍隊之敬禮，陸軍之儀節及陸軍軍人之喪禮，均依本條例之規定。
 
-* 2 本令規定之綱目如左：甲、官兵相見。乙、官兵相遇。丙、軍隊相遇。丁、軍隊操演。以上為發生禮節之起因故謂之四綱。戊、立正。巳、注意。庚、舉手。辛、舉槍。壬、舉刀。以上為實行禮節之項目故謂之五目。
+* 2 本條例稱軍人者，指服用陸軍制服之軍官及其同等官並准尉士兵。稱軍官者，除別有規定外，包括軍官之同等官。稱上官者，指官階在上者。稱隊長者，指獨立隊長及其他軍隊之長。稱軍隊者，指軍人帶領之隊伍，其帶領軍隊者，稱為帶隊官。稱衛兵者，指風紀衛兵及衛戌衛兵，稱步哨者，指野外勤務以外之步哨。稱野戰砲兵者，指野砲兵、山砲兵、騎砲兵、步砲兵。
 
-* 3 本令規定之名稱如左：甲、凡稱為軍人，係指著用陸軍制服之軍官及軍官同等官並准尉士兵而言。乙、凡稱為軍官者，除別有規定外，均含有軍官同等官。丙、凡稱為上官者，均指官階之高者而言。丁、凡稱為隊長，係指獨立隊長及其餘軍隊之長而言。戊、凡稱為軍隊，係指軍人帶領之隊伍而言，其帶領軍隊者，即稱為帶隊官。巳、凡稱為衛兵，係合風紀衛兵及衛戍衛兵而言，衛哨者，站崗衛兵之謂。庚、凡稱為野戰砲兵，係指野砲兵、山砲兵、騎砲兵、步砲兵而言。
+* 3 對於友邦元首之敬禮，與對於國民政府主席之敬禮同。
 
-* 4 對於外國之君主及總統，應按照對於國民政府主席（以下簡稱主席）之敬禮行之。
+* 4 軍官執行上級職務或暫行代理時，仍用原有官階之禮節。但執行職務之際，其部下應對之行職務上之禮節。
 
-* 5 凡軍官執行上級職務或暫行代理時，應用其原有官階之禮節，但執行職務之際，其部下應對之行職務相當之禮節。
+* 5 准尉官或見習軍官及軍需、軍醫、獸醫、司藥之各見習官，均用軍官之敬禮。
 
-* 6 准尉官及見習軍官（見習軍需官、見習軍醫官、見習司藥官、見習獸醫官）均用軍官之敬禮。
+* 6 軍官候補生或軍需、軍醫、獸醫之各候補生，應依所歷階級行士兵之敬禮。關於軍事學校之學生，均行兵卒之敬禮。
 
-* 7 軍官候補生、軍需、軍醫、獸醫、各候補生，均同應按所歷階級行士兵之敬禮，其餘陸軍學生，均行兵卒之敬禮。
+* 7 重砲兵隊中，繫駕者用野砲兵之禮節，徒步者用步兵之禮節。
 
-* 8 重砲兵隊中繫駕者，用野砲兵之禮節，徒步者，用步兵之禮節。
+* 8 軍人凡乘海軍所屬之艦艇或因公會晤海軍軍人時，應依海軍所定之禮節。
 
-* 9 凡軍人乘海軍所屬之艦艇，或因公會晤海軍軍人時，應遵海軍所定之禮節。
+* 9 軍人除別有規定外，對於上官均應行禮，上官應即時答禮，其同級者應互相行禮，行禮者應俟受禮者答禮後，方為禮畢。
 
-* 10 凡軍人除別有規定外，對於上官，均應行禮，上官應即時答禮，其同級者，應互相行禮，凡行禮應俟受禮者答禮完畢後，方為禮畢。
+* 10 軍人相遇，如官階等級不易辨別之時，均應不分先後，互相行禮。
 
-* 11 凡軍人相遇，若官階等級不易辨別之時，均應不分先後，互相行禮。
+* 11 軍人對於素日相識之上官，不問其是否服制服，均應行禮。
 
-* 12 凡軍人對於素日相識之上官，不問其是否身著制服，均應行禮。
+* 12 對於海軍空軍軍人及軍隊或友邦之軍官，均應依照本條例，分別行禮。
 
-* 13 對於海軍、空軍軍人或軍隊，均應按照本令，分別行禮。
+* 13 對於二人以上之上官，除別有規定外，如係軍隊，僅向最高級者行禮，如係單人、先向最高級者行禮，再向以次之各上官行禮。前項行禮時，僅由最高級者答禮。
 
-* 14 對於二人以上之上官，除別有規定外，在軍隊則僅向最高級者行禮，在單人則先向最高級者行禮，再向以次之各上官行同一敬禮，此時僅最高級者答禮即可。
+* 14 軍旗，除對於國民政府主席或祭典外，概不行禮。
 
-* 15 軍旗除對於主席及祭典外，概不行禮。
+* 15 旗官及軍旗衛兵、軍旗隊等，除軍旗行禮時應隨同行禮外，概不行禮。
 
-* 16 旗官及軍旗衛兵軍旗連等，除軍旗行禮時應隨同行禮外，其餘概不行禮。
+* 16 為國民政府主席之儀節或祭典整列之軍隊，除對於主席外，概不行禮。
 
-* 17 對於主席之儀節及祭典，整列之軍隊除對於主席外，概不行禮。
+* 17 大閱整列之軍隊，除對於國民政府主席及閱兵之官長外，概不行禮。
 
-* 18 凡大閱整列之軍隊，除對於主席及閱兵者外，概不行禮。
+* 18 在隨扈服務中之隨扈兵，除別有規定外，概不行禮。但隨扈衛兵之步哨，不在此限。軍人、軍隊及衛兵對於第十六第十七兩條及本條前項之軍隊，概不行禮。
 
-* 19 凡在隨扈服務中之隨扈兵，除執行勤務者不行禮外，其餘均應按照階級行禮。凡軍人、軍隊及衛兵，對於前二條及本條前項之軍隊，概不行禮。
+* 19 軍人及軍隊，其行進間之敬禮，均用正步，乘馬用常步。但未持武器者，則不拘步度行禮，其為緊急任務者，可陳明原因，以跑步行禮，乘馬者以快步或以跑步行禮。
 
-* 20 凡軍人及軍隊其行進間之敬禮，均用正步，乘馬則用常步，但未持武器者則不拘步度行禮，其有緊急任務者，可陳明原因以跑步（乘馬者快步或跑步）行禮。
+* 20 凡軍隊及衛兵在停止間行敬禮時，應目迎目送。如應舉刀或持槍敬禮時，即於動作完畢後，頭向右或向左轉，向受禮者注目，聞抱刀或禮畢之口令，再將頭部轉向正面。如就抱刀持槍之姿勢行禮或僅行立正體時，應依向右看或向左看之口令，為目迎目送，聞向前看之口令，頭轉正面。
 
-* 21 凡軍隊及衛兵在停止間行敬禮時，應目迎目送，如應舉刀或舉槍時，即於動作完畢後，頭向左（右）轉，向受禮者注目，聞抱刀及槍放下之動令，再將頭部轉向正面，若就抱刀持槍之姿勢行禮或祇行立正禮時，則依向『左（右）看』之口令為目迎目送聞（向前看）之口令頭轉正面。
+* 21 一營以上之軍隊，其停止間之敬禮每一營行之，行進間每一連行之。
 
-* 22 一營以上之軍隊，其停止間之敬禮則每一營行之，行進間則每一連行之。
+* 22 凡軍隊及衛兵，除別有規定外，夜聞概不行禮。
 
-* 23 凡軍隊及衛兵，除別有規定外，夜間概不行禮。
+* 23 居室、寢室、辦公室、接待室等，均謂之室內，衛兵所、炊事場、屋廊下及馬&#24272;等，均為室外。
 
-* 24 凡居室、寢室、辦公室、接待室等均謂之室內，其衛兵所、屋廊下、炊爨場及馬廄等均為室外。
+* 24 室內之敬禮應立正向受禮者注目，將體之上部前傾約十五度，以右手持帽之前簷，帽
 
 * 25 室內之敬禮，應立正向受禮者注目，將體之上部前傾約十五度，以右手持帽之前簷，帽裡向內，附於右股，佩刀時，將刀柄向後，手握鞘上兩環之間。
 
