民事訴訟法 1931.1.31

--- a/司法-民事/民事訴訟法.md
+++ b/司法-民事/民事訴訟法.md
@@ -1064,3 +1064,135 @@
 
 * 534 公示催告程序，因提出證券或其他原因，未為除權判決而終結者，法院應依職權，以裁定撤銷禁止支付之命令。
 
+* 535 婚姻之無效、撤銷，確認其成立不成立，離婚或夫妻同居之訴，專屬夫之普通審判籍所在地或其死亡時普通審判籍所在地之第一審法院管轄。前項普通審判籍，不能依第二條規定定之者，以司法院命令定之。
+
+* 536 由夫或妻起訴者，以其配偶為被告。由第三人起訴者，以夫妻同為被告，夫或妻死亡者，以生存者為被告。
+
+* 537 夫或妻為禁治產人時，應由其監護人代為訴訟，如監護人即為其配偶者，應由親屬會議另選訴訟代理人代為訴訟。監護人提起訴訟者，應得親屬會議之同意。
+
+* 538 婚姻之無效、撤銷，確認其成立不成立、離婚或夫妻同居之訴，得合併提起，或於第一審或第二審言詞辯論終結前，為訴之變更、追加或提起反訴。非婚姻事件之訴，以交付子女返還財物或扶養之請求，或由訴之原因事實所生損害賠償之請求為限，得與前項所定之訴合併提起或追加或以反訴主張之。
+
+* 539 原告提起婚姻無效、撤銷或離婚之訴，因無理由被駁回者，不得援以前依訴之合併、變更或追加所得主張之事實，提起獨立之訴。被告以反訴提起前項之訴，因無理由被駁回者，不得援以前得作反訴原因主張之事實，提起獨立之訴。
+
+* 540 關於認諾效力之規定，於婚姻事件不適用之。關於審判上自認及不爭執事實之效力之規定，於婚姻撤銷、無效、不成立、離婚或拒絕同居之原因事實，不適用之。
+
+* 541 法院因維持婚姻，得依職權調查證據，並審酌當事人所未提出之事實。前項調查證據之結果及事實，應於判決前訊問當事人。
+
+* 542 當事人本人不能到場或在遠方者，法院得命受命推事或受託推事訊問之。
+
+* 543 離婚之訴或夫妻同居之訴，法院認當事人有和諧之望者，得於六個月以下之期間內，命中止訴訟程序，但以一次為限。
+
+* 544 法院得依聲請，於婚姻事件訴訟拘束中，命扶養或監護子女或為其他假處分。
+
+* 545 夫或妻於判決確定前死亡者，本案訴訟視為終結。但以夫妻同為被告之訴訟，僅夫或妻死亡者，不在此限。
+
+* 546 婚姻事件之原告，於判決確定前死亡者，有權提起同一訴訟之他人，得於其死亡後三個月內，承受訴訟。
+
+* 547 就婚姻無效、撤銷或確認其成立不成立之訴所為之判決，於夫妻生存時確定者，對於第三人亦有效力。以重婚為理由請求撤銷婚姻之訴被駁回者，其判決對於當事人之前配偶，以已參加訴訟為限，始有效力。
+
+* 548 子女之認領或否認或認領無效或撤銷或就母再婚後所生子女確定其父之訴，專屬子女之普通審判籍所在地或其死亡時普通審判籍所在地之第一審法院管轄。
+
+* 549 否認子女之訴，夫於法定起訴期間內死亡者，繼承權被侵害之人，得提起否認之訴。前項之訴，自夫死亡之日起，應於六個月內提起之。夫於提起否認子女之訴後死亡者，第一項所定得提起訴訟之人，得承受其訴訟。
+
+* 550 就母再婚後所生子女確定其父之訴，母之配偶及前配偶互為被告。由子女或母起訴者，以母之配偶及前配偶同為被告，母之配偶或前配偶死亡者，以生存者為被告。
+
+* 551 否認子女之訴，子女於判決確定前死亡者，本案訴訟視為終結。
+
+* 552 認領子女或認領無效或撤銷之訴，為認領或應為認領之人，於判決確定前死亡者，本案訴訟視為終結。
+
+* 553 收養關係之訴，專屬養父母之普通審判籍所在地，或其死亡時普通審判籍所在地之第一審法院管轄。
+
+* 554 前條之訴，得由養父母中之一人為原告或為被告，養父母有死亡者，由生存者為原告或被告。
+
+* 555 收養關係事件，養子女雖不能獨立以法律行為負義務者，亦有訴訟能力。但受訴訟法院之審判長得選任律師為其訴訟代理人，或命其自行選任。選任訴訟代理人之裁定，應送達於該訴訟代理人。
+
+* 556 關於認諾審判上自認及不爭執事實之效力之規定，於本節所定訴訟不適用之。
+
+* 557 本節所定訴訟，法院得依職權調查證據，並審酌當事人所未提出之事實。前項調查證據之結果及事實，應於判決前訊問當事人。
+
+* 558 第五百三十七條、第五百三十八條第二項、第五百四十二條、第五百四十四條及第五百四十七條第一項之規定，於本節訴訟準用之。第五百三十八條第一項及第五百三十九條之規定，於認領無效或撤銷之訴準用之。
+
+* 559 禁治產之聲請，專屬應禁治產人普通審判籍所在地之第一審法院管轄。
+
+* 560 禁治產之聲請，應表明其原因、事實及證據。
+
+* 561 法院得於禁治產之程式開始前，命聲請人提出診斷書。
+
+* 562 禁治產之程序，不得公開行之。
+
+* 563 禁治產事件，法院應審酌聲請人所表明之事實及證據，依職權為必要之調查。調查費用，如聲請人未預納者，由國庫墊付。
+
+* 564 法院應於鑑定人前訊問應禁治產人。但有礙難訊問之情形或恐有害其健康者，得不訊問。前項訊問，得使受託推事為之。
+
+* 565 禁治產之宣告，非就應禁治產人之心神狀況訊問鑑定人後，不得為之。
+
+* 566 宣告禁治產之裁定，應附理由。前項裁定，應送達於聲請人及禁治產人之法定代理人，或依法應為監護人之人。
+
+* 567 前條裁定，自禁治產人之法定代理人，或依法應為監護人之人受送達時，發生效力。前項裁定送達後，法院應速將該裁定要旨布告之。
+
+* 568 法院於宣告禁治產前，因保護應禁治產人之身體及財產，得命為必要之處分，於宣告後認為必要時，亦同。第五百零一條第三項之規定，於前項情形準用之。
+
+* 569 駁回禁治產聲請之裁定，得為即時抗告。第五百六十一條至第五百六十三條之規定，於抗告法院之程序準用之。
+
+* 570 關於聲請禁治產程序之費用，如宣告禁治產時，由禁治產人負擔。除前項情形外，其費用由聲請人負擔。
+
+* 571 宣告禁治產之裁定，不得抗告。但依民法規定得聲請禁治產之人，得於三十日之不變期間內，向原法院提起撤銷禁治產宣告之訴。前項不變期間，於禁治產人自知有宣告時起算，於他人自該裁定發生效力時起算。
+
+* 572 撤銷禁治產宣告之訴，以原聲請人為被告。原聲請人死亡時，以禁治產人之法定代理人為被告。
+
+* 573 撤銷禁治產宣告之訴，受宣告人有訴訟能力。第五百五十五條之規定，於受宣告人為訴訟行為者準用之。
+
+* 574 撤銷禁治產宣告之訴，不得合併提起他訴或為訴之追加或提起反訴。
+
+* 575 受宣告人於判決確定前死亡者，本案訴訟視為終結。
+
+* 576 第五百四十條、第五百四十一條、第五百四十六條、第五百六十四條及第五百六十五條之規定，於撤銷禁治產宣告之訴準用之。
+
+* 577 撤銷禁治產宣告之訴，法院認為有理由者，應以判決撤銷宣告禁治產之裁定。前項情形，於判決確定前，準用第五百六十八條之規定。
+
+* 578 在撤銷禁治產宣告前，監護人所為之行為，不失其效力。在撤銷禁治產宣告前，禁治產人所為之行為，不得本於宣告禁治產之裁定，而撤銷之。
+
+* 579 撤銷禁治產宣告之判決確定後，應由第一審受訴法院布告之。
+
+* 580 依民法規定得聲請禁治產之人，於禁治產之原因消滅後，得聲請撤銷禁治產。
+
+* 581 撤銷禁治產之聲請，專屬禁治產人普通審判籍所在地之第一審法院管轄。禁治產人在中華民國無普通審判籍者，得向曾為禁治產宣告之法院為之。
+
+* 582 第五百六十條至第五百六十五條之規定，於撤銷禁治產之聲請準用之。
+
+* 583 關於撤銷禁治產程序之費用，如撤銷禁治產之宣告時，由禁治產人負擔。除前項情形外，其費用由聲請人負擔。
+
+* 584 撤銷禁治產之裁定，應附理由。前項裁定，應送達於聲請人及禁治產人。第五百七十九條之規定，於第一項裁定準用之。
+
+* 585 駁回撤銷禁治產聲請之裁定，應送達於聲請人。得聲請撤銷禁治產之人，對於前項裁定，得提起撤銷之訴。但因不合法而被駁回者，僅得為即時抗告。第五百七十二條至第五百七十九條之規定，於前項之訴準用之。
+
+* 586 宣告死亡事件程序，除別有規定外，準用第五百零七條至第五百二十條之規定。
+
+* 587 宣告死亡之聲請，專屬失蹤人住所地之第一審法院管轄。
+
+* 588 宣告死亡之聲請，應表明其原因、事實及證據。
+
+* 589 左列各款事項，應於公示催告記明之：一、失蹤人應於期間內陳報其生存，如不陳報，即應受死亡之宣告。二、凡知失蹤人之生死者，應於期間內將其所知陳報法院。
+
+* 590 前條陳報期間，自公示催告最後登載公報或新聞紙之日起，應有六個月以上。失蹤人滿百歲者，公示催告得僅黏貼於法院之牌示處。前項情形，其陳報期間，自黏貼牌示處之日起，得定為二個月。
+
+* 591 有聲請權之人，得為共同聲請人參加程序或代聲請人續行程序。
+
+* 592 第六百六十三條之規定，於宣告死亡事件準用之。
+
+* 593 失蹤人陳報生存而聲請人否認其事實者，法院應於有確定裁判前，中止宣告程序。
+
+* 594 宣告死亡之判決，應確定死亡之時。
+
+* 595 關於宣告死亡程序之費用，如宣告死亡者，由遺產負擔，其不宣告死亡者，由聲請人負擔。
+
+* 596 撤銷死亡宣告之訴，有法律上利害關係者，得提起之。
+
+* 597 撤銷死亡宣告之訴，除準用第五百一十八條第二項之規定外，如受宣告人尚生存或雖死亡而確定死亡之時不當者，亦得提起之。其以生存為理由者，不適用第五百一十九條之規定。
+
+* 598 撤銷死亡宣告之訴有數宗者，法院應合併之，適用第五十三條之規定。
+
+* 599 第五百四十條、第五百四十一條、第五百四十六條及第五百七十四條之規定，於撤銷死亡宣告之訴準用之。
+
+* 600 撤銷死亡宣告或更正死亡之時之判決，不問對於何人均有效力。但判決確定前之善意行為不受影響。因宣告死亡取得財產者，如因前項判決失其權利，僅於現受利益之限度內，負歸還之責。
+
