--- a/行政-經濟及能源/礦業法.md
+++ b/行政-經濟及能源/礦業法.md
@@ -182,7 +182,7 @@
 
 * 91 礦稅分左列二種，由礦業權者分別繳納。一、礦區稅。二、礦產稅。國營礦業權出租時，前項礦稅由承租人繳納之。
 
-* 92 礦區稅為地面租稅以外之稅，其稅率如左。一、探礦區，每公畝按年納國幣一分，砂礦在河底者，每河道長十公尺，按年納國幣一分。二、採礦區，每公畝或河道每長十公尺，自開辦起五年內，按年納國幣二分，自第六年起，按年納國幣五分。採礦權者，因礦工、罷工或其他不可抗力，致不能工作繼續在二個月以上時，得請求免納不能工作期間之礦區稅。
+* 92 礦區稅為地面租稅以外之稅，其稅率如左。一、採礦區，每公畝按年納國幣一元，砂礦在河底者，每河道長十公尺，按年納國幣一元。二、採礦區，每公畝或河道每長十公尺，自開辦起五年內，按年納國幣二元，自第六年起，按年納國幣五元。採礦權者，因礦工罷工或其他不可抗力，致不能工作繼續在二個月以上時，得請求免納不能工作期間之礦區稅。
 
 * 93 礦產稅按照礦產物價格，納百分之二至百分之十。前項之礦產物價格，以出產地附近市場之平均市價為標準，由農礦部、財政部按照省主管官署報告，會同核定之。
 
@@ -214,21 +214,21 @@
 
 * 107 本章關於礦業權者之規定，於國營礦業權之承租人適用之。
 
-* 108 有左列情形之一者，處三年以下之有期徒刑或三千元以下之罰金。一、以詐欺取得礦業權或違法私自採礦者。二、有第四十一條第二款情形者。
+* 108 有左列情形之一者，處三年以下有期徒刑拘役或三十萬元以下之罰金。一、以詐欺取得礦業權或違法私自採礦者。二、有第四十一條第二款情形者。
 
-* 109 有左列情形之一者，處二千元以下之罰金，其契約無效。一、私將礦業權租賃典質者。二、不經核准，將礦業權讓與或抵押者。
+* 109 有左列情形之一者，處二十萬元以下之罰金，其契約無效。一、私將礦業權租賃典質者。二、不經核准，將礦業權讓與或抵押者。
 
-* 110 逾出礦業以外採礦者，處一千元以下之罰金。
+* 110 逾出礦區以外採礦者，處一十萬元以下之罰金。
 
 * 111 有前條及第一百零八條第一款情形者，沒收其所採之礦產物，如已出售或自用者，應追繳其相當代價。
 
-* 112 違背第二十二條之規定，或不從第九十六條及第九十七條之命令者，處五百元以下之罰金。
+* 112 違背第二十二條之規定或不從第九十六條及第九十七條之命令者，處五萬元以下之罰金。
 
-* 113 違背第九十五條第二項第一百條及第一百零一條之規定者，處二百元以下之罰金。
+* 113 違背第九十五條第二項、第一百條及第一百零一條之規定者，處二萬元以下之罰金。
 
-* 114 違背第六十九條之規定者，處一百元以下之罰金。
+* 114 違背第六十九條之規定者，處一萬元以下之罰金。
 
-* 115 拒絕或妨礙該管官吏檢查關於礦業之簿記或物件者，處五十元以下之罰金。
+* 115 拒絕或妨礙該管官吏檢查關於礦業之簿記或物件者，處五千元以下之罰金。
 
 * 116 凡漏繳礦產稅者，處應納稅額二倍以上十倍以下之罰金，其情節較重者，並得將漏稅貨品沒收之。
 
