軍事審判法 1956.6.22

--- a/行政-國防/軍事審判法.md
+++ b/行政-國防/軍事審判法.md
@@ -1,2 +1,504 @@
-* 188 判決經依前條聲請覆判後，由原審軍事審判機關，轉呈管轄之覆判機關覆判。但將官案件之判決及宣告死刑或無期徒刑之判決，應不待聲請，依職權送請管轄之覆判機關覆判之。
+* 1 現役軍人犯陸海空軍刑法或其特別法之罪，依本法之規定追訴審判之；其在戰時犯陸海空軍刑法或其特別法以外之罪者亦同。非現役軍人不受軍事審判。但戒嚴法有特別規定者，從其規定，
+
+* 2 本法稱現役軍人，謂陸、海、空軍軍官、士官、士兵現職在營服役者。
+
+* 3 左列各款之人，視同現役軍人：一、陸、海、空軍所屬軍用文職人員及專任聘僱人員。二、文職公務員兼任軍職，於戰時負有作戰任務而犯陸海空軍刑法或其特別法與軍事有關之罪者。三、陸、海、空軍所屬在校之學員、學生。四、依志願編入部隊服務或參加作戰者。五、戰時國民兵被召輔助戰時勤務或參加作戰者。六、戰時擔任警備地方之保安部隊官長、士兵。七、戰時參加戰鬥序列之地方民眾自衛團隊、警察隊及其他特種部隊之官長、士兵或隊員。八、應召期間之後備軍人。
+
+* 4 俘虜或投降人犯罪，得依本法追訴審判之。
+
+* 5 犯罪在任職服役前，發覺在任職服役中者，依本法追訴審判。但案件在追訴審判中而離職、離役者，初審案件應移送該管第一審之法院，覆判案件應移送該管第二審之法院審判。犯罪在任職服役中，發覺在離職、離役後者，由法院審判。前二項規定，按行為時之身分適用法律。
+
+* 6 本法稱當事人者，謂軍事檢察官及被告。
+
+* 7 本法稱戰時者，謂抵禦侵略對外作戰之期間。鎮壓叛亂而宣告戒嚴之期間視同戰時。
+
+* 8 本法稱軍事審判機關者，謂有軍事審判權設置軍事法庭之機關。軍事審判機關分為左列三級：一、初級軍事審判機關。二、高級軍事審判機關。三、最高軍事審判機關。
+
+* 9 左列機關為初級軍事審判機關：一、陸軍軍司令部。二、陸軍師司令部。三、陸軍獨立旅司令部。四、海、空軍軍區司令部。五、與前四款相等之軍事機關。六、戰時縣政府或其相等機關，經最高軍事審判機關核准或授權者。
+
+* 10 左列機關為高級軍事審判機關：一、陸、海、空軍各總司令部及其相等軍事機關。二、戰時省或其相等區域之地方保安部隊最高機關，經最高軍事審判機關核准或授權者。
+
+* 11 國防部為最高軍事審判機關。
+
+* 12 依本法實施訴訟程序之公務員，就該管案件，應於被告有利及不利之情形一律注意。被告得請求前項公務員為有利於己之必要處分。
+
+* 13 本法稱軍法人員者，謂軍事審判機關之軍法主官、審判官、軍事檢察官、公設辯護人、書記官、檢驗員、通譯及執法官兵。本法稱軍法官者，謂軍事審判機關之軍法主官、軍事審判官、軍事檢察官及公設辯護人。本法稱審判官者，謂軍事審判官及軍官參與審判者。
+
+* 14 軍法官由國防部就具左列資格之一者，依法任用之：一、經軍法官考試及格者。二、具有司法官或縣司法處審判官之資格者。三、在本法施行前已取得軍法官資格者。
+
+* 15 軍事審判機關軍法主官，秉承該管軍事長官之命，綜理軍法行政事務，指揮軍事法庭之組織及檢察事務之分配。
+
+* 16 軍事審判機關置軍事審判官若干人，依本編第三章第一節之規定，組織軍事法庭，行使審判職權。有二以上軍事審判官時，以一人為主任軍事審判官。
+
+* 17 軍事審判機關置軍事檢察官若干人，依本編第三章第四節之規定，行使檢察職權。有二以上軍事檢察官時，以一人為主任軍事檢察官。第九條第六款之初級軍事審判機關，其軍事檢察官，由其長官兼任之。
+
+* 18 軍法官非依法律不得減俸、停職或免職；非得本人同意，不得調任軍法以外職務。
+
+* 19 軍法官任職期間，不得參加政黨活動。
+
+* 20 軍法官有左列情形之一時，各該級軍事審判機關之軍事長官得命令停職。但仍照支薪給之全數：一、因犯罪嫌疑在羈押中者。二、因病不能任職在一年以上者。因前項第二款之規定停職逾一年者，應予免職。
+
+* 21 軍法官因組織或編制變更而被編餘未派新職者，仍按原階支全數薪給。
+
+* 22 軍事審判機關辦理審判、檢察事務，置書記官，受軍法主官、審判官或軍事檢察官之指揮、監督，掌理紀錄、編案、統計、文牘等事務。
+
+* 23 軍事審判機關得置檢驗員及通譯，其執行職務，受審判官或軍事檢察官之指揮、監督。
+
+* 24 書記官、檢驗員及通譯之任用，準用司法人員之規定。
+
+* 25 軍事法庭分審判庭、覆判庭及非常審判庭。
+
+* 26 審判庭為初審軍事法庭，其區分如左：一、簡易審判庭，以審判官一人獨任行之。二、普通審判庭，以審判官三人合議行之。三、高等審判庭，以審判官五人合議行之。
+
+* 27 簡易及普通審判庭，各級軍事審判機關均得組織之。但第九條第六款之初級軍事審判機關，以組織簡易審判庭為限。高等審判庭，由國防部組織之。但高級軍事審判機關經授權者，亦得組織之。
+
+* 28 覆判庭為第二審軍事法庭，其區分如左：一、普通覆判庭，以審判官三人合議行之，簡任級審判官不得少於二人。二、高等覆判庭，以簡任級審判官五人合議行之。
+
+* 29 普通覆判庭，由高級及最高軍事審判機關組織之。高等覆判庭，由最高軍事審判機關組織之。
+
+* 30 戰時最高軍事審判機關，於戰區得依前條設覆判分庭。
+
+* 31 非常審判庭，為非常審軍事法庭，由最高軍事審判機關以簡任級審判官五人組織之。
+
+* 32 合議審判之軍事法庭，以階高、資深者為審判長。由軍官充任之審判長，其階級不得低於被告。獨任審判，以該審判官行審判長之職權。
+
+* 33 簡易審判庭之審判官，以軍事審判官任之。
+
+* 34 合議審判庭審理現役軍人犯陸海空軍刑法或其特別法之罪者，其審判官以軍事審判官及軍官充任之，除審判長外，軍官之人數不得超過二分之一。前項規定參與審判之軍官，對於被告犯罪事實涉及專門技術之案件，應具有該項技術之專長。
+
+* 35 合議審判庭審理現役軍人犯刑法或其特別法，及依本法第一條第二項、第三條第一款至第七款及第四條規定之案件時，其審判官均以軍事審判官任之。
+
+* 36 二人以上共犯一罪或數罪或一人犯數罪，依前二條規定，其審判庭組織不同時，依第三十四條之規定組織之。
+
+* 37 覆判庭及非常審判庭，其審判官以軍事審判官任之。但覆判庭為提審或蒞審時，其審判官準用第三十四條之規定。
+
+* 38 合議庭之組織，因軍法人員迴避或其他原因致員額不足時，得商由就近軍事審判機關或呈由上級軍事審判機關臨時調充之
+
+* 39 簡易審判庭管轄左列案件：一、士兵及其同等軍人犯有期徒刑以下之罪。二、士官、尉官及其同等軍人犯五年未滿有期徒刑以下之罪。
+
+* 40 普通審判庭管轄左列案件：一、士兵及其同等軍人犯無期徒刑以上之罪。二、士官、尉官及其同等軍人犯五年以上有期徒刑以上之罪。三、校官及其同等軍人之犯罪。
+
+* 41 高等審判庭管轄將官及其同等軍人之犯罪案件。
+
+* 42 第一條第二項但書規定非現役軍人犯罪案件之管轄，依士兵之規定。但文職公務員應比照軍官、士官官階；非現役之軍官、士官，依其原有官階定其管轄。俘虜、投降人犯罪案件之管轄，依士兵之規定。
+
+* 43 數人共犯一罪或一人犯數罪之案件，其審判庭或覆判庭組織不同時，全部按高階或重刑之規定組織之。
+
+* 44 各級軍事審判機關對該管現役軍人犯罪案件有初審管轄權。但將官或其同等軍人犯罪案件，其初審管轄權屬於最高軍事審判機關。非現役軍人犯罪依法受軍事審判之案件，其初審管轄權屬於犯罪地或被告住、居所或所在地之軍事審判機關，其已依第九條第六款及第十條第二款分設初級、高級軍事審判機關者，其初審管轄權屬於該管初級軍事審判機關。但該初級軍事審判機關無管轄權之案件或未設有初級軍事審判機關者，除第四十二條但書規定之案件依前項但書規定外，其初審管轄權屬於該管高級軍事審判機關。
+
+* 45 二人以上共犯一罪之案件，數軍事審判機關各有管轄權之一部時，依左列規定定其管轄：一、不同級軍事審判機關各有管轄權之一部時，全部由上級軍事審判機關管轄。二、同級軍事審判機關各有管轄之一部時，由受理在先者管轄；同時受理而不能互商決定時，呈請共同之上級軍事審判機關決定之。三、非現役軍人與現役軍人共同犯罪，依前條第二項之規定，其審判機關不同時，應由管轄現役軍人之軍事審判機關管轄。
+
+* 46 數軍事審判機關對於案件之管轄不明或有爭議時，由共同上級軍事審判機關指定其管轄。
+
+* 47 上級軍事審判機關，遇有第三十八條情形，或為期審理之公平，或因事實上之便利，得命將被告移送於其他同等之軍事審判機關管轄；軍事審判機關駐地有變更時，得將受理案件移送就近之軍事審判機關管轄前項受移送之軍事審判機關不得拒絕。
+
+* 48 刑法第五十五條、第五十六條之案件，其一部犯罪事實應依本法審判時，全部依本法審判之。
+
+* 49 普通覆判庭覆判左列初審案件：一、士兵及其同等軍人處無期徒刑以下之刑。二、士官、尉官及其同等軍人處有期徒刑以下之刑。三、校官及其同等軍人處有期徒刑七年未滿之刑。四、前三款之官兵，經諭知無罪、免訴、免刑或不受理者。
+
+* 50 高等覆判庭覆判前條規定以外之案件。
+
+* 51 高級軍事審判機關普通覆判庭，依第四十九條之規定，覆判其所轄初級軍事審判機關之初審案件。最高軍事審判機關普通覆判庭，依第四十九條之規定，覆判本機關及高級軍事審判機關之初審案件。
+
+* 52 非常審判庭審理確定判決之違背法令案件。
+
+* 53 軍事審判庭應公開行之。但有關國防機密或軍譽之案件，得不公開，並宣示其理由。前項不公開審判之案件，應由該軍事審判機關長官核准後宣告之。
+
+* 54 審判長於軍事法庭之開閉及審理訴訟，有指揮之權。軍事法庭開庭時，審判長有維持秩序之權。
+
+* 55 軍法人員出庭執行職務時，應著制服。
+
+* 56 軍事法庭為審判時，應用中華民國語言。被告及證人、鑑定人等，如果不通中華民國語言者，由通譯傳譯之。筆錄應用中華民國文字。但有供參考之必要時，得附錄被告或其他關係人所用之地方方言或外國語言。前二項之規定，於軍事檢察官辦理檢察事務時準用之。
+
+* 57 各級軍事審判機關軍事檢察官，受該管軍事長官之指揮、監督，代表國家對於現役軍人之犯罪行使追訴權。依第一條第二項但書、第三條第一款至第七款及第四條規定受理之案件，由軍事檢察官行使追訴權。
+
+* 58 軍事檢察官發覺直屬長官有犯罪嫌疑時，追訴權之行使，應逕報其上級軍事審判機關辦理。
+
+* 59 主任軍事檢察官，得親自處理本機關軍事檢察官之事務，並得命其將已承辦之事務，移轉於其他軍事檢察官處理之。軍事審判機關長官認為必要時，得依前項規定逕行指揮之。
+
+* 60 軍事檢察官為發見真實或遇有急迫情形時，得於該管範圍外行使職務。
+
+* 61 軍事檢察官執行職務時，得請指撥相當武裝部隊，擔任警備及一般軍法警察事宜。
+
+* 62 左列人員為軍法警察官，於其管轄或防區內，有協助軍事檢察官偵查犯罪之職權：一、憲兵長官。二、警察長官。三、特設軍事機關之稽查長官。四、非軍事審判機關之軍事機關、部隊、學校、獨立或分駐之長官或艦、船長。五、戰時擔任警備地方之保安部隊，參加作戰之民眾自衛團隊，警察隊或特種部隊，獨立或分駐之長官或艦、船長。
+
+* 63 左列人員為軍法警察官，應受軍事檢察官之指揮偵查犯罪：一、憲兵官長。二、警察官長。三、特設軍事機關之稽查官長。四、依法令關於特定事項得行使司法警察官之職權者。
+
+* 64 左列員兵為軍法警察，應受軍事檢察官及軍法警察官之指揮偵查犯罪：一、憲兵士兵。二、警員或警察。三、特設軍事機關之巡查及稽查隊員。四、依法令關於特定事項得行使司法警察之職權者。
+
+* 65 軍事檢察官依前三條之規定執行職務時，應出示指揮證。
+
+* 66 軍事檢察官於審判庭審判期日，應蒞庭執行職務。軍事檢察官於覆判庭及非常審判庭審理案件時，應提出意見書。
+
+* 67 審判官於該案件有左列情形之一者，應自行迴避：一、審判官為被害人者。二、審判官現為或曾為被告或被害人之配偶、八親等內之血親、五親等內之姻親或家長、家屬者。三、審判官與被告或被害人訂有婚約者。四、審判官現為或曾為被告或被害人之法定代理人者。五、審判官曾為被告之代理人、辯護人或輔佐人者。六、審判官曾為證人或鑑定人者。七、審判官曾執行軍事檢察官或軍法警察官之職務者。八、審判官曾參與前審之判決者。
+
+* 68 審判官有前條情形而不自行迴避，當事人及被告之直屬長官，於辯論終結前或覆判期間，得隨時以書面向軍法主官聲請之；於審判期日或受訊問時，得以言詞為之。
+
+* 69 軍法主官接受前條之聲請後，應報由軍事審判機關長官裁定之，並通知軍事法庭應迴避人及當事人。被聲請迴避之審判官得提出意見書。
+
+* 70 軍事法庭接受通知後，在裁定前應即停止訴訟程序。但急速處分不在此限。
+
+* 71 軍法主官或軍事審判機關長官，確認審判官有自行迴避之原因時，應依職權報請或逕行命其迴避，並另派審判官。
+
+* 72 本節關於審判官之規定，於軍事法庭之書記官、通譯準用之。
+
+* 73 被告於起訴後，得隨時選任辯護人。被告之直屬長官、法定代理人、配偶、直系或三親等內旁系血親或家長、家屬，得獨立為被告選任辯護人。
+
+* 74 被告之配偶、直系或三親等內旁系血親或家長、家屬或法定代理人，於起訴後得聲請為輔佐人，於審判期日到庭陳述意見。前項之規定，於有關國防機密之案件不適用之。
+
+* 75 辯護人就左列人員選任之：一、向最高軍事審判機關或有審判權之軍事機關登錄之律師。二、曾任軍法官或法院推事、檢察官、公設辯護人者。三、陸、海、空軍軍官或其同等軍人。選任前項第二款、第三款人員為辯護人者，應經審判長之許可。除第一項規定外，經審判長許可者，亦得選任為辯護人。
+
+* 76 辯護人有數人者，送達文書應分別為之。
+
+* 77 辯護人之選任，應於每審級為之。每一被告選任辯護人不得逾二人。前項選任，應提出委任狀於該管軍事審判機關。
+
+* 78 被告所犯最輕本刑為五年以上有期徒刑，未經選任辯護人者，應指定公設辯護人為被告辯護；其他案件認為有必要者亦同。前項案件選任辯護人，於審判期日無正當理由而不到庭者，得指定公設辯護人。
+
+* 79 公設辯護人由審判長指定之。指定公設辯護人後，經被告選任辯護人者，得將指定之辯護人撤銷。
+
+* 80 公設辯護人得依被告之請求，代撰申辯及其他合法請求之文書。
+
+* 81 公設辯護人不得收受被告及關係人之報酬或其他利益。
+
+* 82 辯護人得檢閱卷宗及證物並得抄錄之。
+
+* 83 辯護人得接見羈押之被告，並互通書信；有必要時，得親赴犯罪地及其他有關處所，蒐集有利於被告之證據。但有事實足認其有湮滅、偽造、變造證據或勾串共犯或證人之虞者，得限制或禁止之。
+
+* 84 辯護人對於承辦案件應提出辯護書。
+
+* 85 辯護人、輔佐人為被告之利益，得獨立為訴訟行為。
+
+* 86 辯護人為辯護時，須就事實及法律盡量為被告作有利之主張，並促請對於被告量刑減輕之注意。
+
+* 87 軍事法庭及軍事檢察官對外文書，除有特別規定外，以所隸之軍事審判機關之名義行之。但對於法定程序例行文件，得逕以軍法單位之名義行之。軍法警察官對外文書，以其機關、部隊或學校之名義行之。
+
+* 88 文書除有特別規定外，由書記官制作並編存之。但審判官、軍事檢察官認為必要時，得自行制作或示以要旨命其變更，原制作人對於授意變更之文書，應附記其本來之意見。
+
+* 89 筆錄或由非公務員制作之文書，依法應簽名而不能簽名者，由他人代書姓名，令其以指印代之，並由代書人附記指紋之次序及事由。
+
+* 90 筆錄應當場制作之。前項筆錄，應向受訊問人朗讀或令其閱覽，並詢其有無錯誤，受訊問人請求增減或變更者，應附記其陳述。
+
+* 91 筆錄有二頁以上者，由制作人當場於騎縫處加蓋私章。
+
+* 92 裁判書除依特別規定外，現役軍人，應記載其姓名、性別、年齡、軍事機關、部隊或學校之名稱或番號、職階、住所、居所或駐在地；非現役軍人，記載其姓名、性別、年齡、職業、住所或居所；如係判決書，並應記載軍事檢察官及辯護人之姓名。裁判書之原本，應由為裁判之審判長、審判官簽名；審判長有事故不能簽名時，由資深之軍事審判官附記其事由；審判官有事故時，由審判長附記其事由。
+
+* 93 送達文書，由該管軍事審判機關之傳達員兵為之。送達文書於應受送達人，應向該管軍事機關、部隊、學校或其陳明之住、居所、事務所或送達代收人為之。應受送達人在監獄或看守所者，應囑託該監所長官為之。應受送達人住居於軍事審判機關所在地以外者，現役軍人，得囑託其所在地之軍法警察官或其他軍事審判機關之軍法官代為送達；非現役軍人，得囑託其所在地之法院代為送達，其陳明通郵地址者，並得以應送達之文書掛號郵寄。
+
+* 94 公示送達對法權所不及之地，必要時得以廣播方法行之，其效力發生期間，由軍事審判機關酌定之。
+
+* 95 刑事訴訟法關於文書及送達之規定，與本節不相牴觸者準用之。
+
+* 96 期日及期間，準用刑事訴訟法之規定。
+
+* 97 傳喚被告應用傳票。但必要時得以其他方法行之。傳票應記載左列事項：一、被告之姓名、性別、所屬軍事機關、部隊或學校之名稱或番號及其駐在地或其住、居所。二、案由。三、應到之月、日、時、處所。四、無正當理由不到場者，得命拘提。被告之姓名不明，或因其他情形有必要時，應記載其足資辨別之特徵；被告所屬之軍事機關、部隊或學校之名稱或番號、駐在地或住居所不明者，毋庸記載。傳票於偵查中由軍事檢察官，審判中由審判長或受命審判官，於存根簽名後以軍事審判機關長官之名義行之。
+
+* 98 現役軍人除犯罪嫌疑重大依法得拘提外，為保持軍紀必要時，亦得拘提。
+
+* 99 拘提被告應用拘票，並記載左列事項：一、被告之姓名、性別、軍事機關、部隊或學校之名稱或番號及其駐在地或住、居所。二、案由。三、拘提之理由。四、應解送之處所。第九十七條第三項、第四項之規定，於拘票適用之。拘提由執法官兵、軍法警察或軍法警察官執行。
+
+* 100 拘提被告，應責成或會同其直屬或配屬長官行之。前項被告所在地無直屬或配屬長官者，應會同有關機關始得拘提。但被告為獨立或分駐之單位長官時，依前項之規定。被告為將級人員或少校以上部隊長官時，非經呈准不得拘提。被告為非現役軍人時，其拘提應會同該管警察機關或自治單位主管人員為之。
+
+* 101 第六十二條第二款以外之軍法警察官，發覺部屬有重大犯罪嫌疑時，除得為緊急處置外，並得逕行逮捕之。前項之規定，應於實施後，即時將被逮捕人解送於軍事審判機關軍事檢察官。
+
+* 102 被告逃亡或藏匿者，得以通緝書記載左列事項通緝之：一、被告之姓名、性別、年齡、籍貫、職階、軍事機關、部隊或學校之名稱或番號及其他足資辨別之特徵。但不明者，毋庸記載。二、案由。三、通緝之理由。四、犯罪之年、月、日、時、處所。但不明者，毋庸記載。五、應解送之處所。前項通緝書，由承辦軍事檢察官或審判長簽名，報由該管軍事長官發佈，並呈請國防部通飭協緝。
+
+* 103 通緝經發佈後，軍事檢察官或軍法警察官、軍法警察，得拘提被告或逕行逮捕之。
+
+* 104 軍事檢察官或軍法警察官、軍法警察，遇有左列情形之一者，得拘提或逮捕之：一、因現行犯供述發見之共犯。二、在執行或在押中之脫逃者。
+
+* 105 無偵查犯罪權限之人逮捕現行犯時，應即送交就近之軍事檢察官、軍法警察官或軍法警察。軍法警察官於接受前項逮捕人後，除因不可抗力外，應於二十四小時內，解送軍事檢察官；如為軍法警察，應即時報告長官於限內轉解之。對於第一項逮捕現行犯之人，應詢其姓名、住、居所及逮捕之事由。
+
+* 106 拘提被告，除在執行或在押中脫逃者外，應示以拘票。拘提或逮捕後，應將拘提或逮捕之原因，以書面告知其本人指定之親友。
+
+* 107 刑事訴訟法關於被告之傳喚及拘提之規定，與本節不相牴觸者準用之。
+
+* 108 訊問被告，應先詢其姓名、年齡、籍貫、職階、任職或服役之期間、軍事機關、部隊或學校之名稱或番號，及其駐在地或住、居所，以辨其有無錯誤；如係錯誤，應即釋放；如係管轄錯誤，應即移送。訊問被告，應一併詢其有無戰功、戰績及其直屬長官之姓名、職務及其軍事機關、部隊或學校之名稱或番號及駐在地；如其長官為共同被告，並遞問其再上級之長官。
+
+* 109 訊問被告，應出以懇切之態度，不得用強暴、脅迫、利誘、詐欺及其他不正之方法。
+
+* 110 執行羈押，應用押票將被告解送於指定之軍事看守所；無軍事看守所者，寄押於司法看守所或營房內。軍法警察官執行拘提或逕行逮捕之人犯，或接受拘提逮捕之人犯，於解送前，應看管於其機關或營房內；必要時，得臨時寄押於就近之司法看守所內。司法看守所對於寄押票未具備法定應行記載之事項者，應拒絕之。
+
+* 111 被告及得為其輔佐之人或辯護人，得隨時具保聲請停止羈押；在偵查期間，其原屬長官亦得聲請。
+
+* 112 羈押之被告，有左列情形之一者，如經具保聲請停止羈押不得駁回：一、所犯最重本刑為一年以下有期徒刑、拘役或專科罰金之罪者。二、懷胎五月以上或生產後二月未滿者。三、所犯為有期徒刑以下之刑之罪，現罹重病，經軍醫證明有生命危險者。
+
+* 113 羈押之被告，得不命具保責付於其該管長官或其他適當之人，停止羈押。
+
+* 114 撤銷、停止或再執行羈押之許可，在初審或覆判中，由原審之軍事法庭審判長為之；在提審或蒞審中，由覆判庭之審判長為之；在偵查中，由原軍事檢察官為之。
+
+* 115 刑事訴訟法關於被告之訊問及羈押之規定，與本節不相牴觸者準用之。
+
+* 116 搜索應用搜索票，於呈准軍事審判機關長官後行之。搜索除由軍事檢察官或軍事審判官親自實施外，由軍法警察或軍法警察官執行。於機關、部隊或學校內行搜索時，應會同其長官或其所派之代表行之。搜索住宅，應會同該管憲警機關及自治單位主管人員行之。
+
+* 117 執法官兵、軍法警察或軍法警察官，逮捕被告或執行拘提羈押時，雖無搜索票，得逕行搜索其身體、住宅或其他之處所；軍法警察官依第一百零一條第一項之規定實施者亦同。
+
+* 118 扣押、沒收物品，除當場發給收據外，應編號登記善良保管之。
+
+* 119 搜索旅店，除有不得已情形外，應於午夜前為之。同一案件由同一地區二以上機關行搜索者，應會同行之。
+
+* 120 刑事訴訟法關於搜索及扣押之規定，與本節不相牴觸者準用之。
+
+* 121 軍事法庭或軍事檢察官，因調查證據及犯罪情形，得實施勘驗。
+
+* 122 勘驗得為左列處分：一、履勘犯所或其他與案情有關係之處所。二、檢查身體。三、檢驗屍體。四、解剖屍體。五、檢查與案情有關係之物件。六、其他必要之處分。
+
+* 123 前條第一、第二、第五、第六各款之規定，軍法警察官於必要時，亦得為之；其第三款之規定，得囑託法院檢察官為之；縣長或其相等機關長官兼任軍事檢察官實施勘驗，得囑託軍事法庭審判官代為之。
+
+* 124 傳喚證人應用傳票。傳票至遲應於到場期日三日前送達。但有急迫情形者，不在此限。軍法警察官於調查證據期間，必要時亦得以書面或口頭通知證人到場。
+
+* 125 證人應於結文簽名；不能簽名者，由他人代書姓名，令其以指印代之，並由代書人附記指紋之次序及事由。
+
+* 126 證人經合法傳喚無正當理由不到庭，或到庭後無正當理由拒絕具結或證言者，科以五十元以下之罰鍰。前項科罰，現役軍人由軍事法庭裁定之；非現役軍人送法院裁定之。
+
+* 127 審判長或軍事檢察官，得囑託證人所在地之軍事審判官、軍事檢察官、法院推事或檢察官訊問證人，如證人不在該地者，得轉為囑託代訊，必要時並得囑託證人所在地之軍法警察官為之。受託訊問證人者，與本案繫屬之軍事審判機關、軍事法庭審判長或軍事檢察官有同一之權限。但軍法警察官受囑託時，如有前條第一項之情形，應依同條第二項之規定辦理之。
+
+* 128 刑事訴訟法關於勘驗及人證之規定，與本節不相牴觸者準用之。
+
+* 129 鑑定人應於鑑定前宣誓，其誓詞內應記載必為公正誠實之鑑定等語。
+
+* 130 鑑定及通譯，除前條規定外，準用前節關於人證之規定；刑事訴訟法之規定，與本節不相牴觸者準用之。
+
+* 131 合議裁判，應經評議決定之，並將參與評議者發表之意見，記載於評議錄。裁判之評議不公開。
+
+* 132 裁判評議，以審判長為主席，由階低者先發言，階同以資淺者先發言，階、資均同者，以年少者為先，遞推至審判長為止，以過半數之意見決定之，必要時並得投票決定，由階、資低者檢票。裁判之評議，有軍官參與審判時，由軍官依前項規定先發言。關於金額，如意見分三說以上各不達過半數時，以最多額之意見順次算入次多額之意見，至達過半數為止。關於刑事，如意見分三說以上各不達過半數時，以最不利於被告之意見順次算入次不利於被告之意見，至達過半數為止。
+
+* 133 判決由該管軍事審判機關長官核定後，宣示或送達之。最高軍事審判機關高等覆判庭之判決，呈請總統核定後，宣示或送達之。核定判決時，如認判決不當或違背法令，應發交覆議，不得逕為變更原判決之核定；發交覆議，以一次為限。覆議結果不論變更或維持原判決，應照覆議後之判決予以核定。
+
+* 134 案件之審限，另以命令定之。
+
+* 135 刑事訴訟法關於裁判之規定，與本節不相牴觸者準用之。
+
+* 136 不問何人，知現役軍人有犯罪嫌疑者，得為告發。現役軍人犯罪之被害人得為告訴。告發、告訴應以文書或言詞向該管軍事檢察官、軍法警察官、軍法警察或各級軍事機關或部隊長官為之；其以言詞為之者，應制作筆錄。
+
+* 137 以文書為告發者，得先調查告發人。告發人得要求代守秘密。
+
+* 138 自首應向軍事檢察官、軍法警察官或其長官為之。
+
+* 139 軍事檢察官因告發、告訴、自首或其他情事知有犯罪嫌疑者，應即偵查犯人及證據。軍法警察官遇有前項情形時，應即通知軍事檢察官並協助偵查。軍事機關及部隊長官遇有第一項情形時，應即通知軍事檢察官。軍法警察遇有第一項情形時，應報由主管之軍法警察官辦理之。
+
+* 140 刑法第一百十六條、第一百十八條請求乃論之罪，外國政府之請求，應由外交部轉請國防部令知該管軍事檢察官偵查。
+
+* 141 實施偵查，非有必要不得先傳被告。
+
+* 142 軍法警察官實施協助偵查後，應將偵查結果於五日內，作成調查書，連同證據送有管轄權之軍事審判機關。
+
+* 143 軍法警察官對於被拘提或逮捕之犯罪嫌疑人，認為有羈押必要時，應至遲於二十四小時內，移送有管轄權之軍事審判機關。
+
+* 144 軍法警察官知有犯罪嫌疑而不屬其管轄，或於開始偵查後認為該案件不屬其管轄者，除有急迫情形應為必要之處分外，應檢同卷證移送有管轄權之軍事審判機關，如有人犯一併解送。
+
+* 145 軍事檢察官依偵查所得之證據，足認被告有犯罪嫌疑者，應提起公訴。被告之所在不明或為法權所不及者，亦應提起公訴。
+
+* 146 案件有左列情形之一者，應為不起訴之處分：一、曾經判決確定者。二、時效已完成者。三、曾經大赦者。四、犯罪後之法律已廢止其刑罰者。五、告訴或請求乃論之罪，其告訴或請求已經撤回或已逾告訴期間者。六、被告已死亡者。七、軍事審判機關對於被告無審判權者。八、行為不罰者。九、法律應免除其刑者。十、犯罪嫌疑不足者。依前項第七款之規定為不起訴之處分者，應將案件移送於有審判權之機關。
+
+* 147 軍事檢察官認為合於刑法第六十一條所列各罪之案件，參酌刑法第五十七條所列事項以不起訴為適當者，得為不起訴處分。軍事檢察官為前項不起訴處分前，並得斟酌情形，經告訴人及被告直屬長官之同意，命被告為左列各款事項：一、向被害人道歉。二、立悔過書。三、向被害人支付相當數額之撫慰金。前項情形，應附記於不起訴處分書內。
+
+* 148 軍事檢察官為不起訴之處分者，應制作處分書，敘述不起訴之理由，經軍事長官核准後，以其正本送達於被害人、告訴人、被告及被告直屬長官並上級軍事審判機關。第五十七條第二項規定之案件，其不起訴處分書於呈報軍事長官後，依前項規定以正本送達之。刑法第六十一條所列之案件或簡易審判庭管轄之案件，依前二項規定所為不起訴之處分，得以言詞為之，由書記官制作筆錄並送達之。
+
+* 149 被害人、告訴人及被告直屬長官接受不起訴處分書後，得於七日內以書面敘述不服或不當之理由，經原軍事檢察官向上級軍事審判機關聲請再議。但有第一百四十七條之情形者，不得聲請再議。對於最高軍事審判機關軍事檢察官所為不起訴之處分聲請再議時，應向該機關長官為之。
+
+* 150 上級軍事審判機關長官認再議之聲請為無理由者，應駁回之；認為有理由者，應分別為左列處分：一、偵查未完備者，命令原軍事審判機關軍事檢察官續行偵查。二、偵查已完備者，命令原軍事審判機關軍事檢察官起訴。
+
+* 151 不起訴處分已確定者，非有左列情形之一，不得對於同一案件再行起訴：一、發見新事實或新證據者。二、有第二百二十九條第一項第一款、第二款、第四款或第五款所定得為再審原因之情形者。
+
+* 152 犯人不明或為法權所不及者，於認有第一百四十六條所定之情形以前，不得終結偵查。
+
+* 153 刑事訴訟法關於偵查之規定，與本節不相牴觸者準用之。
+
+* 154 提起公訴，由軍事檢察官制作起訴書，現役軍人犯罪案件之起訴書，經軍事長官核准後提出之；非現役軍人犯罪案件之起訴書，於呈報軍事長官後提出之。起訴書應記載左列事項：一、被告之姓名、性別、年齡、籍貫、職業，軍事機關、部隊或學校之名稱或番號及其分駐地或住、居所或其他足資辨別之特徵。二、犯罪事實及證據並所犯法條。起訴時應將卷宗及證物一併移送。
+
+* 155 起訴書之送達，準用第一百四十八條第一項之規定。
+
+* 156 軍事檢察官於初審辯論終結前，發見有應不起訴或以不起訴為適當之情形者，得撤回起訴。
+
+* 157 刑事訴訟法關於起訴之規定，與本節不相牴觸者準用之。
+
+* 158 案件經起訴後，軍法主官應按被告之職階，犯罪之刑名，擬定審判庭之軍事審判官，簽請軍事長官核定，其有軍官參與審判時，應同時簽請指派。行合議審判之案件，為準備審判起見，得就前項軍事審判官指定一員為受命審判官，於審判期日前，訊問被告及蒐集或調查證據。受命審判官關於訊問被告及蒐集或調查證據，與審判長有同一之權限。
+
+* 159 高等審判庭因被告所在地遠隔或其他障礙，軍法主官得簽請軍事長官命審判長、審判官前往該地組織法庭審判。
+
+* 160 軍事法庭獨立行使審判權，不受任何干涉。
+
+* 161 審判期日應傳喚被告，並通知軍事檢察官、辯護人、輔佐人。
+
+* 162 起訴或其他訴訟行為，於法律上必備之程式有欠缺而其情形可以補正者，軍事法庭應定期間命其補正。
+
+* 163 審判期日應由審判官、軍事檢察官及書記官出庭。
+
+* 164 審判期日除有特別規定外，被告不到庭者不得審判。第七十八條第一項所定之案件無辯護人到庭者，不得審判。但宣示判決不在此限。
+
+* 165 審判長依第一百零八條訊問被告後，軍事檢察官應陳述起訴之要旨。
+
+* 166 犯罪事實，應依證據認定之。
+
+* 167 證據之證明力，由軍事法庭自由判斷之。但不得以無反證為認定犯罪之主要依據。
+
+* 168 被告雖經自白仍應調查其他必要之證據，以察其是否與事實相符。
+
+* 169 卷宗內之筆錄及其他文書可為證據者，應向被告宣讀或告以要旨，被告請求閱覽者，不得拒絕。前項文書有關國防機密、風化、公安或毀損他人名譽者，應交被告閱覽不得宣讀；如被告不解其意義者，應告以要旨。
+
+* 170 證人、鑑定人由審判長訊問後，當事人及辯護人，得聲請審判長或直接詰問之。直接詰問，審判長除為維持法庭秩序外，不得予以限制。如證人、鑑定人係當事人聲請傳喚者，先由該當事人或辯護人詰問，次由他造之當事人或辯護人詰問，再次由聲請傳喚之當事人或辯護人覆問。但覆問以關於因他造詰問發見之事項為限。
+
+* 171 調查證據完畢後，應命依左列次序，就事實及法律辯論之：一、軍事檢察官。二、被告。三、辯護人。已辯論者再為辯論，審判長亦得命再行辯論。
+
+* 172 辯論終結後，遇有必要情形，軍事法庭得命再開辯論。
+
+* 173 被告犯罪已經證明者，應諭知科刑之判決。但免除其刑者，應諭知免刑之判決。
+
+* 174 前條之判決，得就起訴之犯罪事實，變更軍事檢察官所引應適用之法條。
+
+* 175 不能證明被告犯罪或其行為不罰者，應諭知無罪之判決。
+
+* 176 案件有左列情形之一者，應諭知免訴之判決：一、曾經判決確定者。二、時效已完成者。三、曾經大赦者。四、犯罪後之法律已廢止其刑罰者。五、被告就他罪受重刑之判決已經確定，因其於執行之刑無重大關係，認為本罪毋庸科刑者。
+
+* 177 案件有左列情形之一者，應諭知不受理之判決：一、起訴之程序違背規定者。二、已經提起公訴之案件，在同一軍事審判機關重行起訴者。三、告訴或請求乃論之罪未經告訴、請求，或其告訴、請求經撤回或已逾告訴期間者。四、曾為不起訴處分或撤回起訴而違背第一百五十一條之規定再行起訴者。五、被告死亡者。六、對於被告無審判權者。七、依第四十五條第二款之規定不得為審判者。
+
+* 178 前條第六款因無審判權而諭知不受理之判決，應同時諭知移送於有審判權之機關。
+
+* 179 戰時犯叛亂罪，其以軍隊、艦船、飛機交付敵人，經依第一百四十五條第二項之規定起訴者，為公示送達後，於審判期日，得不待其陳述，逕行判決。
+
+* 180 第一百七十六條至第一百七十八條之判決，得不經言詞辯論為之。
+
+* 181 判決書應記載其判決之主文。有罪之判決書，應將認定之事實及理由分別記載之。
+
+* 182 有罪之判決書，應於主文內分別情形記載左列事項：一、所諭知之主刑、從刑或刑之免除。二、諭知六月以下有期徒刑或拘役者，如易科罰金，其折算之標準。三、諭知罰金者，如易服勞役，其折算之標準。四、諭知易以訓誡者，其諭知。五、諭知緩刑者，其緩刑之期間。六、諭知保安處分者，其處分及期間。
+
+* 183 有罪之判決書，應於理由內分別情形記載左列事項：一、認定犯罪事實所憑之證據及其認定之理由。二、對被告有利之陳述及辯護意旨不採納之理由。三、科刑時，就刑法第五十七條或第五十八條規定事項，所審酌之情形。四、刑罰有加重、減輕或免除者，其理由。五、易以訓誡或緩刑者，其理由。六、諭知保安處分者，其理由。七、適用之法律。
+
+* 184 判決得為聲請覆判者，其聲請覆判期間，提出聲請之軍事審判機關，及第一百八十九條、第一百九十條第一項之規定，應於宣示時一併告知，並應記載於送達被告之判決正本。合於職權覆判者，宣示時，告知提出答辯書之期間及覆判之機關。第一項判決正本，並應送達於被害人、告訴人及被告之直屬長官。受送達人於聲請期間內，得向軍事檢察官陳述意見。
+
+* 185 羈押之被告，經諭知無罪、免訴、免刑、緩刑、罰金或易以訓誡或第一百七十七條第三款、第四款不受理之判決者，視為撤銷羈押。但聲請覆判期內或覆判中，得命具保、責付或限制住居；如不能具保、責付或限制住居而有必要情形者，並得繼續羈押之。
+
+* 186 刑事訴訟法關於審判之規定，與本節不相牴觸者，準用之。
+
+* 187 當事人不服初審之判決者，得聲請覆判。軍事檢察官為被告之利益，亦得聲請覆判。被告之直屬長官為被告之利益，得聲請覆判。被告之法定代理人或配偶，得為被告之利益，獨立聲請覆判。原審之辯護人得為被告之利益而聲請覆判。但不得與被告明示之意思相反。對覆判庭之判決，不得聲請再覆判。
+
+* 188 判決經依前條聲請覆判後，由原審軍事審判機關，轉呈管轄之覆判機關覆判。但將官案件之判決及宣告死刑或無期徒刑之判決，應不待聲請，依職權送請最高軍事審判機關覆判之。
+
+* 189 聲請覆判期間為十日，自送達判決後起算。但判決宣示後送達前之聲請亦有效力。
+
+* 190 聲請覆判，應以文書提出於原審軍事審判機關為之。但被告於宣示判決時當庭聲請者，得以言詞為之，由書記官制作筆錄。前項聲請非由被告為之者，應由軍事審判機關抄錄繕本，送達於被告並通知其答辯。
+
+* 191 在監所之被告聲請覆判者，應經監所長官提出聲請文書；其於聲請期間內向監所長官提出聲請文書者，視為聲請期間內之聲請。被告不能自作聲請文書者，應由監所公務員代作。監所長官接受聲請文書後，應附記接受之年、月、日、時，送交原軍事審判機關。
+
+* 192 有聲請覆判權之人，得捨棄其聲請權。聲請覆判於覆判判決前得撤回之。但為被告之利益而聲請者，非得被告之同意，不得為之。前二項之聲請，非由被告為之者，應即通知被告。
+
+* 193 捨棄聲請覆判權，應向原審軍事審判機關為之。撤回聲請覆判，應向覆判機關為之。但於該案卷宗送交覆判機關以前，得向原審軍事審判機關為之。
+
+* 194 捨棄聲請覆判權及撤回聲請覆判，應以文書為之。但於審判期日，得以言詞為之。第一百九十一條之規定，於捨棄聲請覆判權或撤回聲請覆判準用之。捨棄聲請覆判權或撤回聲請覆判者，喪失其聲請權。
+
+* 195 捨棄聲請覆判權或撤回聲請覆判，書記官應速通知他造當事人。
+
+* 196 原審軍事審判機關認聲請覆判違背法律上之程式，或其聲請覆判權已喪失者，應以裁定駁回之。但其情形可以補正者，應定期間命其補正。
+
+* 197 送覆判之案件，原審軍事審判機關應速將該案卷宗、證物送交覆判機關。
+
+* 198 聲請覆判得對於判決之一部為之，未聲明為一部者視為全部聲請覆判。對於判決之一部聲請覆判者，其有關係之部份，視為亦已聲請覆判。
+
+* 199 覆審案件以書面審理，於必要時，得提審或蒞審。提審或蒞審，應令知原審軍事審判機關；如被告在押並應由其轉知在押被告之監所長官。
+
+* 200 提審或蒞審之案件，審判長於依第一百零八條訊問被告後，應命聲請人陳述聲請之要旨。
+
+* 201 提審或蒞審之案件，覆判機關應就原判決經聲請覆判之部份調查之。
+
+* 202 提審或蒞審，被告經依法傳喚無正當之理由不到庭者，得不待其陳述逕行判決。
+
+* 203 覆判機關對於覆判案件之判決，應自覆判庭接受卷宗、證物之日起二十日內為之；必要時，得由覆判庭聲請覆判機關長官核准展期，展期每次二十日，以二次為限。前項審限規定，於提審或蒞審時不適用之。書記官接受判決原本後，應於七日內制作判決正本，送達軍事檢察官、聲請人及被告。
+
+* 204 覆判庭認為聲請覆判違背法律上之程式或其聲請權已經喪失者，應以判決駁回之。但其情形可以補正者，應定期間命其補正。
+
+* 205 覆判庭認為初審判決認定事實適用法律無誤者，如係聲請覆判，應認聲請為無理由，以判決駁回之；如係職權送請覆判，應為核准之判決。
+
+* 206 原審判決後，刑罰有廢止、變更或免除者，得為聲請覆判之理由。
+
+* 207 覆判庭為核准判決時，得同時諭知緩刑。
+
+* 208 覆判案件，除應駁回或全部核准者外，覆判庭應撤銷原判決自為判決。但因原審判決認定事實顯有不當而撤銷之者，得以判決將該案件發回原審軍事審判機關，或發交其他軍事審判機關更為審理；因原審判決諭知免訴、不受理係不當而撤銷之者，得以判決將該案件發回原審軍事審判機關更為審理。第一百八十八條之規定，於前項更審判決仍適用之。第一項但書之規定，不適用於提審或蒞審。
+
+* 209 聲請覆判人及他造當事人，在覆判機關判決前，得提出聲請覆判理由書、答辯書、意見書或追加理由書於覆判機關。
+
+* 210 第七十八條之規定，於覆判機關之覆判不適用之。
+
+* 211 由被告聲請覆判或為被告利益而聲請覆判者，不得諭知較重於原審判決之刑。但因原審判決適用法條不當或量刑顯係失出而撤銷之者，不在此限。
+
+* 212 為被告之利益而撤銷原審判決時，如於共同被告有共同撤銷理由者，其利益並及於共同被告。
+
+* 213 覆判判決書得引用原審判決書記載之事實及證據。
+
+* 214 敵前犯專科死刑之案件宣告死刑者，如於該管區域內為鎮壓叛亂維持治安確有重大關係時，原審軍事審判機關得先摘敘被告姓名、年齡、犯罪事實、證據、所犯法條及必須緊急處置之理由，電請覆判機關先予覆判，隨後補送卷宗、證物。但覆判庭認為有疑義時，應電令速即呈送卷宗、證物。前項規定，如事後發覺所處罪刑與事實、證據不符或有重大錯誤者，原審之軍事審判機關長官及審判人員應依法治罪。
+
+* 215 覆判庭於前條第一項為核准時，應自接受電報之日起五日內呈請核定令准執行，其核准之電文視為核准判決。
+
+* 216 覆判除本章規定外，準用本編第二章第三節審判之判定。
+
+* 217 當事人及被告直屬長官，對左列初審軍事審判機關之裁定，得為抗告：一、更定其刑或應執行之刑。二、羈押、具保或責付。三、扣押或扣押物之發還。四、聲請迴避。五、再審之駁回。證人、鑑定人、通譯受罰鍰之裁定者，亦得抗告。
+
+* 218 抗告期間，除有特別規定外，為五日，自送達裁定後起算。但裁定經宣示後送達前之抗告，亦有效力。
+
+* 219 提起抗告，應以書面敘述抗告之理由，提出於原審軍事審判機關為之。
+
+* 220 原審軍事審判機關認為抗告違背法律上之程式，或抗告權已經喪失，或係未經規定得抗告而抗告者，應以裁定駁回之。原審軍事審判機關認為抗告有理由者，應更正其裁定；認為全部或一部無理由者，應於接受抗告書面後三日內送交抗告軍事審判機關並得添具意見。
+
+* 221 抗告軍事審判機關認為抗告無理由，或有前條第一項之情形者，應以裁定駁回之。
+
+* 222 抗告軍事審判機關認為抗告有理由者，應以裁定將原裁定撤銷；於有必要時，並自為裁定。
+
+* 223 抗告軍事審判機關之裁定，應速通知原審軍事審判機關。
+
+* 224 對於抗告軍事審判機關之裁定，不得再行抗告。
+
+* 225 對於審判長、受命審判官或軍事檢察官所為左列之處分，得聲請其所屬軍事審判機關撤銷或變更之：一、關於羈押、具保、責付者。二、關於扣押或扣押物之發還者。三、關於搜索或查封者。
+
+* 226 第二百十九條至第二百二十三條之規定，於前條之聲請準用之。
+
+* 227 對聲請撤銷或變更之裁定，不得抗告。
+
+* 228 抗告除本章規定外，準用本編第三章覆判之規定；刑事訴訟法之規定，與本章不相牴觸者準用之。
+
+* 229 有罪之判決確定後，有左列情形之一者，為受判決人之利益，得聲請再審：一、原判決所憑之證物，已證明其為偽造或變造者。二、原判決所憑之證言、鑑定或通譯，已證明其為虛偽者。三、受有罪判決之人，已證明其係被誣告者。四、原判決所憑之法院或軍事法庭之裁判，已經確定裁判變更者。五、參與原判決或前審判決前所行調查之審判官，或參與偵查或起訴之軍事檢察官，因該案件犯職務上之罪已經證明者。六、因發見確實之新證據，足認受有罪判決之人應受無罪、免訴、免刑或輕於原判決所認罪名之判決者。七、原判決對足生影響判決之重要證據，漏未調查或審酌者。前項第一款至第三款及第五款情形之證明，以經判決確定，或其軍事審判不能開始或續行非因證據不足者為限，得聲請再審。
+
+* 230 有罪、無罪、免訴或不受理之判決確定後，有左列情形之一者，為受判決人之不利益得聲請再審：一、有前條第一款、第二款、第四款或第五款之情形者。二、受無罪或輕於相當之刑之判決，而於訴訟上或訴訟外自白或發見確實之新證據，足認其有應受有罪或重刑判決之犯罪事實者。三、受免訴或不受理之判決，而於訴訟上或訴訟外自述或發見確實之新證據，足認其並無免訴或不受理之原因者。
+
+* 231 依第二百二十九條第一項第七款規定，因重要證據漏未調查或審酌而聲請再審者，應於確定判決送達後二十日內為之。
+
+* 232 為受判決人之利益聲請再審，得由左列各人為之：一、原審軍事審判機關之軍事檢察官。二、受判決人。三、受判決人之法定代理人或配偶。四、受判決人已死亡，或在心神喪失中者其配偶、直系血親、三親等內之旁系血親、二親等內之姻親或家長、家屬。五、受判決人之直屬長官。
+
+* 233 為受判決人之不利益聲請再審，得由原審軍事審判機關之軍事檢察官為之。
+
+* 234 原審軍事法庭認為聲請再審之程序違背規定者，應以裁定駁回之。
+
+* 235 聲請再審無停止刑罰執行之效力。但該管軍事審判機關之軍事檢察官，在關於再審之裁定前，得命停止執行。前項檢察官之命令，以一次為限。
+
+* 236 刑事訴訟法關於再審之規定，與本章不相牴觸者準用之。
+
+* 237 判決確定後，發見該案件之審判係違背法令者，最高軍事審判機關之主任軍事檢察官，得以書面敘述理由，向該最高軍事審判機關提起非常審判。
+
+* 238 軍事檢察官發見有前條情形者，應具意見書，呈由該管長官將該案卷宗及證物送請最高軍事審判機關主任軍事檢察官，聲請提起非常審判。
+
+* 239 有左列情形之一者，其判決當然為違背法令：一、軍事法庭之組織不合法者。二、依法律或裁判應迴避之審判官參與審判者。三、軍事審判機關所認管轄之有無係不當者。四、軍事審判機關受理案件或不受理案件係不當者。五、除有特別規定外，被告未於審判期日到庭而逕行審判者。六、依本法應用辯護人之案件，或已經指定辯護人之案件，辯護人未經到庭辯護而逕行審判者。七、除有特別規定外，未經軍事檢察官到庭陳述而為審判者。八、依本法應停止或更新審判而未經停止或更新者。九、依本法應於審判期日調查之證據未予調查者。十、未與被告以最後陳述之機會者。十一、除本法有特別規定外，已受請求之事項未予判決，或未受請求之事項予以判決者。十二、未經參與審理之審判官參與判決者。十三、判決不載理由或所載理由矛盾者。十四、判決理由對於被告有利之陳述或辯護意旨不予採納而未經記載者。
+
+* 240 非常審判，由最高軍事審判機關組織非常審判庭，以書面審理之。
+
+* 241 非常審判庭之調查，以聲請非常審判理由所指摘之事項為限。但左列事項，得以職權調查之：一、第二百三十九條各款所列之情形。二、免訴事由之有無。三、對於確定事實援用法令之當否。四、原審判決後刑罰之廢止、變更或免除。五、原審判決後之大赦或被告之死亡。
+
+* 242 非常審判之程序，準用關於覆判之規定。
+
+* 243 認為非常審判之提起無理由者，應以判決駁回之。
+
+* 244 認為非常審判之提起有理由者，應分別為左列之判決：一、原判決違背法令者，將其違背之部份撤銷。但原判決不利於被告者，應就該案件另行判決。二、審判程序違背法令者，撤銷其程序。前項第一款情形，如係認為無審判權而不受理，或其他有維持被告審級利益之必要者，得將原判決撤銷，由原審軍事審判機關依判決前之程序更為審判。但不得諭知較重於原確定判決之刑。
+
+* 245 非常審判之判決，除依前條第一項第一款但書及第二項規定者外，其效力不及於被告。
+
+* 246 執行裁判，由為裁判之軍事審判機關之軍事檢察官指揮之。但其性質應由軍事審判機關或審判長、受命審判官、受託審判官指揮，或有特別規定者，不在此限。
+
+* 247 死刑之執行，應於判決確定後，由最高軍事審判機關發佈執行命令執行之。
+
+* 248 死刑於軍人監獄內執行。但必要時，得另定刑場執行並公告之。
+
+* 249 處徒刑及拘役之人犯，除別有規定外，於軍人監獄內分別執行。
+
+* 250 扣押物之應受發還人所在不明或因其他事故不能發還者，戰時認為必要，得不經公告逕行拍賣，保管其價金。
+
+* 251 刑事訴訟法關於執行之規定，與本章不相牴觸者準用之。
+
+* 252 本法自中華民國四十五年十月一日施行。
 
