中華民國刑法 1969.12.16

--- a/司法-刑事/中華民國刑法.md
+++ b/司法-刑事/中華民國刑法.md
@@ -466,7 +466,7 @@
 
 * 234 公然為猥褻之行為者，處拘役或一百元以下罰金。
 
-* 235 散布或販賣猥褻之文字、圖畫及其他物品，或公然陳列，或以他法供人觀覽者，處一千元以下罰金。意圖販賣而製造、持有前項之文字、圖畫及其他物品者亦同。
+* 235 散布或販賣猥褻之文字、圖畫或其他物品，或公然陳列，或以他法供人觀覽者，處一年以下有期徒刑、拘役或科或併科三千元以下罰金。意圖散布、販賣而製造、持有前項之文字、圖畫或其他物品者亦同。前二項之文字、圖畫及物品，不問屬於犯人與否沒收之。
 
 * 236 第二百二十一條至第二百三十條之罪，須告訴乃論。
 
